make use of initially known primitive types